# ai-camera

./: .gitignore  CMakeLists.txt  README_GB28181.md
docs/: BUILD_FIXES.md  SERIAL_MODULE_GUIDE.md  gb28181_implementation_guide.md  gb28181_setup.md  gb28181_setup_guide.md  log_module_guide.md  mdns_test_plan.md  mdns_usage.md  mqtt_implementation_guide.md  mqtt_quick_start.md  mqtt_setup_guide.md  onvif-module-implementation.md  websocket.md
docs/design/: media-layer-design.md
include/ai-camera/gb28181/: gb28181_config.h  gb28181_manager.h  gb28181_media_sender.h  gb28181_sdp_helper.h  gb28181_types.h  ps_encoder.h  sip_agent.h  sip_message.h  sip_message_handler.h
include/ai-camera/mdns/: dns_message.h  mdns_impl.h  mdns_service.h  mdns_types.h
include/ai-camera/media/: i_media_buffer.hpp  media_buffer.h  media_buffer_adapter.hpp  media_frame.h  media_frame.hpp  media_packet.h  media_packet.hpp  nalsource_adapter.hpp
include/ai-camera/mqtt/: mqtt_client.h  mqtt_json.h  mqtt_manager.h  mqtt_types.h
include/ai-camera/onvif/: device_service.h  events_service.h  media_service.h  onvif_manager.h  onvif_types.h  soap_helper.h  wsdiscovery.h
include/ai-camera/serial/: serial_config.h  serial_http.h  serial_manager.h  serial_port.h  serial_protocol.h
include/server/ws/: ws_frame.hpp  ws_handshake.hpp  ws_server.hpp  ws_session.hpp  ws_types.hpp
src/: main.cpp
src/gb28181/: gb28181_manager.cpp  gb28181_media_sender.cpp  gb28181_sdp_helper.cpp  ps_encoder.cpp  sip_agent.cpp  sip_message.cpp  sip_message_handler.cpp
src/mdns/: dns_message.cpp  mdns_impl.cpp  mdns_service.cpp
src/media/: media_buffer.c  media_frame.c  media_frame.cpp  media_packet.c  media_packet.cpp  nalsource_adapter.cpp
src/mqtt/: mqtt_client.cpp  mqtt_manager.cpp  mqtt_types.cpp
src/onvif/: device_service.cpp  events_service.cpp  media_service.cpp  onvif_manager.cpp  soap_helper.cpp  wsdiscovery.cpp
src/serial/: serial_http.cpp  serial_manager.cpp  serial_port.cpp  serial_protocol.cpp
src/server/ws/: ws_server.cpp  ws_session.cpp
src/ws/: sha1.cpp
tests/: asio_demo.cpp  test_gb28181.cpp  test_logger.cpp  test_mdns.cpp  test_media.cpp  test_mqtt.cpp
